# yad-dialog

./: ChangeLog  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  autogen.sh  configure  configure.ac
data/: Makefile.am  Makefile.in  yad.1
examples/: Makefile.am  Makefile.in  gsu  logout
m4/: gtk-deprecated.m4
po/: LINGUAS  POTFILES.in  de.po  fr.po  it.po  pt_BR.po  ru.po  sk.po  uk.po  zh_TW.po
src/: Makefile.am  Makefile.in  about.c  browser.c  calendar.c  color.c  dnd.c  entry.c  file.c  fileselection.c  font.c  form.c  html.c  icons.c  list.c  main.c  multi-progress.c  notebook.c  notification.c  option.c  paned.c  print.c  progress.c  scale.c  text.c  util.c  yad.h
trunk/: ChangeLog  Makefile.am  Makefile.in  NEWS  README  THANKS  TODO  acinclude.m4  aclocal.m4  config.h.in  configure  configure.ac
trunk/data/: Makefile.am  Makefile.in  yad.1  yad.m4.in  yad.spec
trunk/examples/: Makefile.am  autostart  gsu
trunk/po/: LINGUAS  POTFILES.in  de.po  fr.po  it.po  pt_BR.po  ru.po  sk.po  uk.po  zh_TW.po
trunk/src/: Makefile.am  Makefile.in  about.c  browser.c  calendar.c  color.c  dnd.c  entry.c  file.c  fileselection.c  font.c  form.c  html.c  icons.c  list.c  main.c  multi-progress.c  notebook.c  notification.c  option.c  print.c  progress.c  scale.c  text.c  util.c  yad-zenity.sh  yad.h
