INCLUDES = 					\
	-DLOCALEDIR=\""$(datadir)/locale"\"	\
	@DISABLE_DEPRECATED@

bin_PROGRAMS = yad   

yad_SOURCES = 		\
	about.c		\
	calendar.c	\
	color.c		\
	dnd.c           \
	entry.c		\
	fileselection.c	\
	form.c		\
	icons.c		\
	list.c		\
	notification.c	\
	option.c	\
	progress.c	\
	scale.c		\
	text.c		\
	util.c		\
	main.c		\
	yad.h

yad_CFLAGS = 		\
	$(YAD_CFLAGS)

yad_LDADD = 		\
	$(YAD_LIBS)

DISTCLEANFILES =

EXTRA_DIST =


